# clipboard-image-watcher

./: .gitignore  Cargo.toml  README.md
src/: main.rs  util.rs
